Drools with java 21